# chariot

./: .gitignore  Cargo.toml  Makefile  PROJECT  README.md  build.rs  busybox.yaml  go.mod  go.sum  nginx.yaml
.github/workflows/: codeverify.yml  unittest.yml
agent/: Cargo.toml
agent/src/: main.rs
agent/src/cfg/: mod.rs
agent/src/cmd/: mod.rs
agent/src/cmd/init/: mod.rs
agent/src/cmd/run/: mod.rs
api/networking/v1alpha1/: groupversion_info.go  subnet_types.go  zz_generated.deepcopy.go
api/provisioning/v1alpha1/: dpu_types.go  dpuset_types.go  groupversion_info.go  zz_generated.deepcopy.go
cmd/operator/: main.go
cmd/shim/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: networking.openbce.io_subnets.yaml  provisioning.openbce.io_dpus.yaml  provisioning.openbce.io_dpusets.yaml
config/crd/patches/: cainjection_in_dpus.yaml  cainjection_in_dpusets.yaml  webhook_in_dpus.yaml  webhook_in_dpusets.yaml
config/default/: kustomization.yaml
config/manager/: manager.yaml
config/manifests/: kustomization.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  dpu_editor_role.yaml  dpu_viewer_role.yaml  dpuset_editor_role.yaml  dpuset_viewer_role.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: kustomization.yaml  provisioning_v1alpha1_dpu.yaml  provisioning_v1alpha1_dpuset.yaml
device_plugin/: Cargo.toml
dra/: Cargo.toml
examples/: rt.yaml
hack/: boilerplate.go.txt
internal/controller/networking/: subnet_controller.go
internal/controller/provisioning/: dpu_controller.go  dpuset_controller.go  suite_test.go
internal/cri/: containerd.go
operator/: Cargo.toml
shim/: Cargo.toml  build.rs
shim/examples/: nginx.yaml  rt.yaml
shim/src/: common.rs  main.rs
shim/src/cfg/: mod.rs
shim/src/cri/: image.rs  mod.rs  runtime.rs
shim/src/cri/runtime/: mod.rs
shim/src/cri/runtime/storage/: mod.rs
shim/src/cri/runtime/storage/engine/: fs.rs  mod.rs
shim/systemd/: chariot.service  shim.toml
src/: lib.rs
src/apis/: mod.rs  types.rs
src/core/: main.rs
src/core/cfg/: mod.rs
src/core/cgroup/: mod.rs
src/core/cmd/: mod.rs
src/core/cmd/delete/: mod.rs
src/core/cmd/init/: mod.rs
src/core/cmd/log/: mod.rs
src/core/cmd/run/: mod.rs
src/core/cmd/runc/: mod.rs
src/core/cmd/start/: mod.rs
src/core/netlink/: mod.rs
src/core/network/: mod.rs
src/core/network/ovs/: mod.rs
src/rpc/: mod.rs
src/shim/: image.rs  main.rs
src/shim/cfg/: mod.rs
src/shim/runtime/: mod.rs
src/shim/runtime/storage/: mod.rs
src/shim/runtime/storage/engine/: fs.rs  mod.rs
sys/: Cargo.toml
sys/protos/: api.proto
sys/src/: lib.rs
sys/src/apis/: mod.rs  types.rs
