[workspace]
resolver = "2"

members = [
  "dra",
  "operator",
  "shim",
]

[workspace.package]
edition = "2021"
license-file = "LICENSE"
authors = ["openBCE Authors (@openbce)"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.11", features = ["tls"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
thiserror = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
toml = "0.8"
stdng = "0.1"

tonic-build = "0.11"
prost = "0.12"

