[package]
name = "chariot"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
authors = ["openBCE Authors (@openbce)"]

[[bin]]
name = "chariot"
path = "src/core/main.rs"

[[bin]]
name = "chariot-shim"
path = "src/shim/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.11", features = ["tls"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
tower = "0.4"
prost = "0.12"
prost-types = "0.12"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
thiserror = "1"
stdng = "0.1"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

nix = { version = "0.29", features = [
    "sched",
    "fs",
    "signal",
    "mount",
    "user",
    "process",
] }
oci-spec = "0.7.0"
flate2 = "1.0"
tar = "0.4"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
