[package]
name = "chariot-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chariot-sys = {path = "../sys"}

tonic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
stdng = { workspace = true }

nix = { version = "0.29" , features = ["sched", "fs", "signal"]}
oci-spec = "0.7.0"