[package]
name = "chariot-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true}

futures="0.3"
prost = "*"
prost-types = "*"
prost-build = "*"
async-trait = "0.1"

[build-dependencies]
tonic-build = { workspace = true}
