[package]
name = "chariot-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chariot-sys = {path = "../sys"}

tonic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
stdng = { workspace = true }

tokio-stream = { version="0.1", features=["net"] }
futures="0.3"
prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
tower = "0.4"

[build-dependencies]
tonic-build = { workspace = true }
