[package]
name = "sys"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
stdng = { workspace = true }

tokio-stream = { version="0.1", features=["net"] }
futures="0.3"
prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
tower = "0.4"


libc = "0.2"

[build-dependencies]
tonic-build = { workspace = true }